samples/_failures_safe/1761091269_1c9eb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ba1fb22.c: In function ‘main’:
./samples/SAFE/__tmp_0ba1fb22.c:154:9: error: expected expression at end of input
  154 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_0ba1fb22.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0ba1fb22.c:154:9: error: expected declaration or statement at end of input
